[package]
name = "axum-listener"
version = "0.2.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/uttarayan21/axum-listener"
description = "A simple listener for axum with UDS and TCP support"
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]


[dependencies]
axum = { version = "0.8", default-features = false, features = ["tokio"] }
futures = "0.3"
tokio = { version = "1", default-features = false, features = ["net"] }
tracing = "0.1"

[dev-dependencies]
axum = { version = "0.8", features = ["tokio"] }
bytes = "1.10.1"
chrono = { version = "0.4.42", features = ["serde"] }
serde_json = "1.0.145"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-test = "0.4.4"
tracing-subscriber = "0.3.20"

[features]
default = ["http1"]
http1 = ["axum/http1", "axum/tokio"] # Enables HTTP/1 support in axum
http2 = ["axum/http2", "axum/tokio"] # Enables HTTP/2 support in axum
